# Veritasor-Contracts

./: .gitignore  BENCHMARK_IMPLEMENTATION_SUMMARY.md  BENCHMARK_QUICK_REFERENCE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PR_MESSAGE.md  README.md  TODO.md
.github/workflows/: ci.yaml  ci.yml
contracts/aggregated-attestations/: Cargo.toml
contracts/aggregated-attestations/src/: lib.rs  test.rs
contracts/attestation/: Cargo.toml  benchmark_results_sample.txt  run_benchmarks.sh
contracts/attestation-registry/: Cargo.toml
contracts/attestation-registry/src/: lib.rs  test.rs
contracts/attestation-registry/test_snapshots/test/: admin_transfer_changes_admin.1.json  complex_upgrade_rollback_scenario.1.json  get_version_info_after_upgrade.1.json  initialize_success.1.json  new_admin_can_upgrade.1.json  query_functions_return_none_when_uninitialized.1.json  query_functions_work_after_multiple_upgrades.1.json  rollback_by_non_admin_panics.1.json  rollback_multiple_times.1.json  rollback_success.1.json  transfer_admin_by_non_admin_panics.1.json  transfer_admin_success.1.json  upgrade_allows_skipping_versions.1.json  upgrade_by_non_admin_panics.1.json  upgrade_multiple_versions.1.json  upgrade_preserves_previous_implementation.1.json  upgrade_success.1.json  upgrade_to_same_implementation_allowed.1.json  upgrade_with_empty_migration_data.1.json  upgrade_with_lower_version_panics.1.json  upgrade_with_migration_data.1.json  upgrade_with_same_version_panics.1.json  version_info_activated_at_is_reasonable.1.json
contracts/attestation-snapshot/: Cargo.toml  build.rs
contracts/attestation-snapshot/src/: lib.rs  test.rs
contracts/attestation/src/: access_control.rs  access_control_test.rs  anomaly_test.rs  batch_submission_test.rs  dispute.rs  dispute_test.rs  dynamic_fees.rs  dynamic_fees_test.rs  events.rs  events_test.rs  expiry_test.rs  extended_metadata.rs  extended_metadata_test.rs  fees.rs  fees_test.rs  gas_benchmark_test.rs  key_rotation_test.rs  lib.rs  multisig.rs  multisig_test.rs  pause_test.rs  proof_hash_test.rs  query_pagination_test.rs  rate_limit.rs  rate_limit_test.rs  registry.rs  registry_test.rs  revocation_test.rs  test.rs
contracts/attestation/test_snapshots/dynamic_fees_test/: test_combined_tier_and_volume_discounts.1.json  test_double_initialize_panics.1.json  test_economic_simulation.1.json  test_fee_quote_matches_actual_charge.1.json  test_fees_disabled.1.json  test_fees_toggled_on_off.1.json  test_flat_fee_no_discounts.1.json  test_negative_base_fee_panics.1.json  test_no_fee_config_free.1.json  test_tier_discounts.1.json  test_tier_upgrade.1.json  test_volume_brackets.1.json
contracts/attestor-staking/: Cargo.toml
contracts/attestor-staking/src/: lib.rs  slashing_test.rs  test.rs
contracts/audit-log/: Cargo.toml
contracts/audit-log/src/: lib.rs  test.rs
contracts/common/: Cargo.toml
contracts/common/src/: governance_gating.rs  interface_spec_check.rs  interface_spec_check_test.rs  key_rotation.rs  key_rotation_test.rs  lib.rs  merkle.rs  merkle_fuzz_test.rs  merkle_test.rs  replay_protection.rs  replay_protection_test.rs  security_invariant_test.rs
contracts/integration-registry/: Cargo.toml
contracts/integration-registry/src/: lib.rs  test.rs
contracts/lender-access-list/: Cargo.toml
contracts/lender-access-list/src/: lib.rs  test.rs
contracts/lender-consumer/: Cargo.toml
contracts/lender-consumer/src/: lib.rs  test.rs
contracts/lender-consumer/test_snapshots/test/: test_dispute_status.1.json  test_submit_and_verify_revenue.1.json  test_submit_invalid_revenue_panics.1.json  test_trailing_revenue_and_anomalies.1.json
contracts/protocol-dao/: Cargo.toml
contracts/protocol-dao/src/: lib.rs  test.rs
contracts/revenue-curve/: Cargo.toml
contracts/revenue-curve/src/: lib.rs  test.rs
contracts/revenue-settlement/: Cargo.toml
contracts/revenue-settlement/src/: lib.rs  test.rs
contracts/revenue-share/: Cargo.toml  README.md
contracts/revenue-share/src/: lib.rs  test.rs
contracts/revenue-stream/: Cargo.toml
contracts/revenue-stream/src/: lib.rs  test.rs
docs/: aggregated-attestations.md  attestation-anomaly-flags.md  attestation-disputes.md  attestation-dynamic-fees.md  attestation-expiry.md  attestation-fees.md  attestation-metadata.md  attestation-queries.md  attestation-rate-limits.md  attestation-revocation.md  attestation-snapshots.md  attestation-upgrades.md  batch-attestation-submission.md  contract-gas-benchmarks.md  contract-interfaces.md  emergency-key-rotation.md  lender-access-list.md  lender-attestation-consumer.md  merkle-fuzz-testing.md  merkle-proof-verification.md  multi-period-attestations.md  offchain-proof-hash.md  onchain-audit-log.md  protocol-dao-governance.md  replay-protection.md  revenue-settlement.md  revenue-share-distribution.md  security-invariants.md  time-locked-revenue-streams.md
target2/: .rustc_info.json
target2/debug/.fingerprint/der-ab99c01ee2df43d1/: lib-der  (+1 more)
(+652 files in other folders)
