[workspace]
# Keep members in alphabetical order so new PRs add in the same place (reduces merge conflicts).
members = [
    "contracts/attestation",
    "contracts/attestation-snapshot",
    "contracts/aggregated-attestations",
    "contracts/audit-log",
    "contracts/common",
    "contracts/integration-registry",
    "contracts/revenue-stream",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
