[workspace]
# Keep members in alphabetical order so new PRs add in the same place (reduces merge conflicts).
members = [
    "contracts/attestation",
    "contracts/attestor-staking",
    "contracts/audit-log",
    "contracts/integration-registry",
    "contracts/protocol-dao",
    "contracts/revenue-stream",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
