[package]
name = "veritasor-attestation-snapshot"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.75.0"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "22.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Host builds (tests): use crate client. wasm32 uses contractimport! to avoid duplicate symbols.
veritasor-attestation = { path = "../attestation" }

[dev-dependencies]
soroban-sdk = { version = "22.0", features = ["testutils"] }
veritasor-attestation = { path = "../attestation" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
