[package]
name = "veritasor-common"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.75.0"

[lib]
doctest = false

[dev-dependencies]
soroban-sdk = { version = "22.0", features = ["testutils"] }
veritasor-attestation = { path = "../attestation" }
veritasor-integration-registry = { path = "../integration-registry" }
veritasor-attestation-snapshot = { path = "../attestation-snapshot" }
veritasor-aggregated-attestations = { path = "../aggregated-attestations" }
