[package]
name = "lender-consumer"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "22.0"

[dev-dependencies]
soroban-sdk = { version = "22.0", features = ["testutils"] }
veritasor-attestation = { path = "../attestation" }
veritasor-lender-access-list = { path = "../lender-access-list" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
