[package]
name = "veritasor-revenue-stream"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.75.0"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "22.0"
veritasor-common = { path = "../common" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
veritasor-attestation = { path = "../attestation" }

[dev-dependencies]
soroban-sdk = { version = "22.0", features = ["testutils"] }
veritasor-attestation = { path = "../attestation" }
veritasor-common = { path = "../common" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
